Updated repo org

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mailer-q-pug",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/arsood/mailer-q-pug"
+    "url": "https://github.com/mailer-q/mailer-q-pug"
   },
   "description": "Pug renderer for the MailerQ plugin",
   "main": "index.js",
