Update dependencies and update readme

--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   },
   "description": "Pug renderer for the MailerQ plugin",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Arun Sood",
   "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0"
+  },
   "dependencies": {
-    "pug": "^2.0.0-rc.2"
+    "pug": "^3.0.2"
   }
 }
